--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "shouts-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://us-central1-socialportfolio-155d8.cloudfunctions.net/api",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
